--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,12 @@
 h1 {
-    color: red;
+  color: red;
+}
+
+.block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 200px;
+  width: 200px;
+  background-color: #000;
 }
