first screen without mobile

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,10 @@
-h1
-    color: red
-.block
-    display: flex
-    height: 200px
-    width: 200px
-    background-color: #000
+@import 'promo'
+@import 'mixins'
+@import 'variables'
+*
+    box-sizing: border-box
+    font-family: 'Museo Sans Cyrl', sans-serif
+    margin: 0
+    padding: 0
+.container
+    max-width: 950px
