--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,8 @@
 @import 'promo'
 @import 'mixins'
 @import 'variables'
+@import 'advantages'
+
 *
     box-sizing: border-box
     font-family: 'Museo Sans Cyrl', sans-serif
