--- a/src/sass/promo.sass
+++ b/src/sass/promo.sass
@@ -1,9 +1,44 @@
 @import 'variables'
 @import 'mixins'
+@media (max-width: 768px)
+    .promo
+        width: 100% !important
+        &__wrapper
+            align-items: center !important
+        &__icons
+            justify-content: center !important
+            gap: 40px !important
+        &__consultation, &__button
+            justify-content: center !important
+    .running-man-2-64
+        width: 100% !important
+    .header
+        width: 100% !important
+        &__official
+            font-size: 10px
+        &__phone
+            button
+                width: 100px !important
+                font-size: 10px !important  
+    .garmin, .header__phone
+        font-size: 10px !important
+        text-align: center
+@media (min-width: 768px) and (max-width: 1024px)
+    .header
+        width: 100% !important
+        &__official
+            font-size: 14px
+        &__phone
+            button
+                width: 150px !important
+                font-size: 14px !important  
+    .garmin, .header__phone
+        font-size: 16px !important
+        text-align: center
 .promo
     min-height: 650px
     padding: 21px 0 93px 0
-    background: url('../img/bg1.jpg')
+    background: url('../img/bg1.jpg') center (center/cover) no-repeat
     &__wrapper
         display: flex
         flex-direction: column
