added third screen and media

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -28,6 +28,9 @@
   text-align: center;
   font-size: 14px;
 }
+.advantages__title a {
+  color: #ff0000;
+}
 .advantages__icon {
   display: -webkit-box;
   display: -ms-flexbox;
