--- a/src/sass/advantages.sass
+++ b/src/sass/advantages.sass
@@ -17,6 +17,8 @@
         color: #0d0d0d
         text-align: center
         font-size: 14px
+        a
+            color: #ff0000
     &__icon
         display: flex
         justify-content: center
