--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,9 @@
 @import 'promo'
 @import 'mixins'
+@import 'buttons'
 @import 'variables'
 @import 'advantages'
+@import 'consultation'
 
 *
     box-sizing: border-box
