--- a/src/sass/mixins.sass
+++ b/src/sass/mixins.sass
@@ -15,3 +15,13 @@
     color: #fff
     &:hover
         background-color: darken($red-color, 10%)
+@mixin input
+    width: 300px
+    height: 50px
+    border: none
+    margin-bottom: 15px
+    border-radius: 5px
+    color: #4b4b4b
+    padding: 20px 0 18px 20px
+    font-size: 14px
+    font-weight: 300
