--- a/sass/buttons.sass
+++ b/sass/buttons.sass
@@ -1,8 +1,8 @@
-@import 'mixins'
+@use 'mixins'
 .button
-    @include button
+    @include mixins.button
 .consultation_button
-    @include button
+    @include mixins.button
     width: 300px
     height: 55px
     font-size: 16px
