--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,11 @@
-@import 'promo'
-@import 'mixins'
-@import 'buttons'
-@import 'variables'
-@import 'advantages'
-@import 'consultation'
-@import 'carousel'
+@use 'promo'
+@use 'mixins'
+@use 'buttons'
+@use 'variables'
+@use 'advantages'
+@use 'consultation'
+@use 'carousel'
+@use 'catalog'
 
 *
     box-sizing: border-box
