--- a/sass/consultation.sass
+++ b/sass/consultation.sass
@@ -1,4 +1,4 @@
-@import 'mixins'
+@use 'mixins'
 .consultation
     min-height: 680px
     padding: 100px 0 92px 0
@@ -19,7 +19,7 @@
         flex-direction: column
         width: 300px
     &__input
-        @include input
+        @include mixins.input
 @media (min-width: 375px) and (max-width: 768px)
     .consultation
         &__form
