--- a/sass/mixins.sass
+++ b/sass/mixins.sass
@@ -1,20 +1,21 @@
-@import 'variables'
+@use "sass:color"
+@use 'variables'
 @mixin phone_number
-    color: $white-color
+    color: variables.$white-color
     text-decoration: none
 @mixin button
     padding: auto
-    text-transform: $uppercase
+    text-transform: variables.$uppercase
     border: none
     border-radius: 5px
-    background-color: $red-color
+    background-color: variables.$red-color
     font-size: 12px
     margin-top: 8px
     font-weight: 500
     text-align: center
     color: #fff
     &:hover
-        background-color: darken($red-color, 10%)
+        background-color: color.adjust(variables.$red-color, $lightness: -10%)
 @mixin input
     width: 300px
     height: 50px
