--- a/sass/variables.sass
+++ b/sass/variables.sass
@@ -1,3 +1,6 @@
 $white-color: #fff
 $uppercase: uppercase
 $red-color: #c70101
+$border-color: #d0d0d0
+$black-color: #0d0d0d
+$price-color: #050505
