--- a/sass/catalog.sass
+++ b/sass/catalog.sass
@@ -37,10 +37,12 @@
         
     &__content
         margin-top: 60px
-        display: grid
+        display: none
         grid-template-columns: repeat(3, 300px)
         grid-template-rows: repeat(2, 440px)
         gap: 20px
+        &_active
+            display: grid
         hr
             margin: 10px auto 
             width: 260px
@@ -51,6 +53,7 @@
         border: solid 2px #e8e8e8
         background-color: variables.$white-color
         text-align: center
+        overflow: hidden
         &__footer
             display: flex
             flex-direction: row
@@ -102,4 +105,55 @@
             color: variables.$red-color
             font-size: 14px
             font-weight: 500
-            
+        &__wrapper
+            display: flex
+            width: calc(200% + 40px)
+        &__content
+            width: 50%
+            margin-right: 0px
+            transform: translateX(-100%)
+            transition: 0.5s all
+            &_active
+                transform: translateX(0%)
+                margin-right: 20px
+        &__list
+            width: 50%
+            transform: translateX(0%)
+            transition: 0.5s all
+            list-style-type: none
+            margin-right: 35px
+            margin-top: 18px
+            position: relative
+            &_active
+                transform: translateX(-100%)
+                margin-left: 0px
+            li
+                font-size: 14px
+                font-weight: 300
+                text-align: left
+                color: #555
+                position: relative
+                &::before
+                    content: ''
+                    position: absolute
+                    width: 5px
+                    height: 5px
+                    background-color: variables.$red-color
+                    left: -14px
+                    top: 7px
+            a   
+                display: block
+                line-height: 10px
+                position: relative
+                color: variables.$red-color
+                font-size: 14px
+                font-weight: 500
+                position: absolute
+                top: 0px
+                right: 0px
+                left: 50%
+                transform: translate(-50%, -50%)
+                top: 316px
+            &_active
+                transform: translateX(-100%)
+                margin-left: 0px
