--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -15,7 +15,7 @@
     &__info
         position: absolute
         width: 460px
-        min-height: 270px
+        height: 270px
         background-color: variables.$red-color
         top: 0
         left: 50%
