--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,20 @@
   transform: translateY(-50%);
 }
 
+@media (max-width: 768px) {
+  .modal .consultation__form {
+    width: 100% !important;
+  }
+  .modal .consultation__input {
+    width: 100% !important;
+  }
+  .modal__close {
+    right: 10px !important;
+    top: 10px !important;
+  }
+}
 .overlay {
+  display: none;
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.56);
@@ -824,7 +837,7 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-.modal_close {
+.modal__close {
   position: absolute;
   top: 0;
   right: -40px;
@@ -833,14 +846,14 @@
   color: #c70101;
   cursor: pointer;
 }
-.modal_title {
+.modal__title {
   text-align: center;
   font-size: 18px;
   font-weight: bold;
   color: #0d0d0d;
   margin-bottom: 11px;
 }
-.modal_descr {
+.modal__descr {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
@@ -852,6 +865,18 @@
 }
 .modal .consultation_form button {
   margin-top: 5px !important;
+}
+
+#thanks {
+  height: 140px;
+  padding: 38px 76px 43px 81px;
+}
+#thanks .modal_title {
+  font-size: 17px;
+}
+
+#consultation, #order, #thanks {
+  display: none;
 }
 
 * {
