--- a/sass/modal.sass
+++ b/sass/modal.sass
@@ -1,6 +1,16 @@
 @use 'variables'
-    
+
+@media (max-width: 768px)
+    .modal
+        .consultation__form
+            width: 100% !important
+        .consultation__input
+            width: 100% !important
+        &__close
+            right: 10px !important
+            top: 10px !important
 .overlay
+    display: none
     height: 100vh
     width: 100%
     background-color: rgba(0, 0, 0, 0.56)
@@ -17,7 +27,7 @@
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
-    &_close
+    &__close
         position: absolute
         top: 0
         right: -40px
@@ -25,13 +35,13 @@
         line-height: 21px
         color: variables.$red-color
         cursor: pointer
-    &_title
+    &__title
         text-align: center
         font-size: 18px
         font-weight: bold
         color: variables.$black-color
         margin-bottom: 11px
-    &_descr
+    &__descr
         font-size: 14px
         font-weight: 500
         text-align: center
@@ -41,3 +51,10 @@
         margin-top: 25px
         button
             margin-top: 5px !important
+#thanks
+    height: 140px
+    padding: 38px 76px 43px 81px
+    .modal_title
+        font-size: 17px
+#consultation, #order, #thanks
+    display: none   
