--- a/sass/consultation.sass
+++ b/sass/consultation.sass
@@ -20,6 +20,8 @@
         width: 300px
     &__input
         @include mixins.input
+    label.error
+        color: #fff
 @media (min-width: 375px) and (max-width: 768px)
     .consultation
         &__form
