--- a/css/consultation.css
+++ b/css/consultation.css
@@ -37,6 +37,9 @@
   font-size: 14px;
   font-weight: 300;
 }
+.consultation label.error {
+  color: #fff;
+}
 
 @media (min-width: 375px) and (max-width: 768px) {
   .consultation__form {
